--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -6,40 +6,32 @@ article#post-78 {
         margin-bottom: 0;
     }
 
-    section.company-info-container {
-        section.company-info {
-            p {
-                text-align: left;
-            }
-        }
-    }
     section.founder-info-container {
-        padding-top: 3rem;
+        padding-top: 2rem;
         section.founder-info {
             h3 {
                 margin-bottom: 0;
             }
 
             img {
-                width: 13rem;
-                height: 13rem;
+                width: 15rem;
+                height: 15rem;
                 object-fit: cover;
                 border-radius: 50% 50%;
-                border: $yellow solid 5px;
+                border: $yellow solid 10px;
+                outline: $coral solid 10px;
+                margin: .5rem 0;
             }
         }
     }
 
-    section.locations-info-container {
-        padding: 1rem 0 2rem 0;
-        section.locations-info {
-            a.button {
-                text-decoration: none;
-                padding: .75rem 1rem;
-                background-color: $bg-color;
-                border: $text-color solid 2px;
-                border-radius: 50px 50px;
-                color: $text-color;
+    section.company-info-container {
+        h2 {
+            color: $coral;
+        }
+        section.company-info {
+            p {
+                text-align: left;
             }
         }
     }
@@ -62,7 +54,9 @@ article#post-78 {
                 width: 30rem;
                 object-fit: cover;
                 border-radius: 10px 10px;
-                padding-bottom: 1rem;
+                border: $coral solid 10px;
+                outline: $bg-color solid 10px;
+                margin: .5rem 0;
             }
         }
     }
@@ -86,14 +80,7 @@ article#post-78 {
         section.founder-info-container {
             @include page-grid-layout;
             section.founder-info {
-                padding: 0 5rem;
-            }
-        }
-
-        section.locations-info-container {
-            @include page-grid-layout;
-            section.locations-info {
-               
+                padding: 0 6.5rem;
             }
         }
 
@@ -102,7 +89,7 @@ article#post-78 {
             section.join-us-info {
 
                 div.join-us-content {
-                    padding: 0 5rem;
+                    padding: 0 6.5rem;
                 }
             }
         }
