--- a/sass/components/_front-page.scss
+++ b/sass/components/_front-page.scss
@@ -1,324 +1,325 @@
 @import "abstracts/abstracts";
 
 .site-main {
-  .home-blog {
-    .ul {
-      display: flex;
-      flex-wrap: nowrap;
-      overflow-x: auto;
-      max-width: 100vw;
-      overflow: hidden;
-      margin: 0;
+    .home-blog {
+        .ul {
+            display: flex;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+            max-width: 100vw;
+            overflow: hidden;
+            margin: 0;
 
-      li {
-        flex: 0 0 auto;
-        // margin-right: 1rem;
-      }
-    }
-
-    img {
-      // max-width: 2rem;
-      // margin: 0.3rem 0;
-    }
-  }
-
-  section.cheesecakes-container {
-    display: flex;
-    justify-content: center;
-    width: 80%;
-    margin: 0 auto;
-
-    section.cheesecakes {
-      p {
-        margin: 0;
-        justify-content: center;
-        text-align: left;
-      }
-
-      a {
-        display: inline-block;
-        border: 2px solid $coral;
-        border-radius: 25px 25px;
-        margin: 3rem 0;
-        padding: 0.5rem 1.5rem;
-        transition: 0.3s ease;
-        color: $coral;
-        text-decoration: none;
-
-        &:hover {
-          background-color: $coral;
-          color: $bg-color;
-        }
-      }
-    }
-  }
-
-  @media screen and (min-width: 48rem) {
-    section.cheesecakes-container {
-      width: 50%;
-    }
-  }
-
-  .favourites-container {
-    .favourites {
-      ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 0;
-        padding: 0;
-
-        li {
-          display: flex;
-          flex-wrap: wrap;
-          justify-content: center;
-          padding: 0 1rem;
-          a {
-            img {
-              margin: 0 auto;
-              object-fit: cover;
-              width: 200px;
-              height: 200px;
-              border-radius: 50%;
+            li {
+                flex: 0 0 auto;
+                // margin-right: 1rem;
             }
-          }
-          h3 {
-            width: 100%;
-          }
         }
-      }
 
-      .button {
-        display: inline-block;
-        border: 2px solid $coral;
-        border-radius: 25px 25px;
-        margin: 3rem 0;
-        padding: 0.5rem 1.5rem;
-        transition: 0.3s ease;
-        color: $coral;
-        text-decoration: none;
-
-        &:hover {
-          background-color: $coral;
-          color: $bg-color;
+        img {
+            // max-width: 2rem;
+            // margin: 0.3rem 0;
         }
-      }
     }
-  }
+
+    section.cheesecakes-container {
+        display: flex;
+        justify-content: center;
+        width: 80%;
+        margin: 0 auto;
+
+        section.cheesecakes {
+            p {
+                margin: 0;
+                justify-content: center;
+                text-align: left;
+            }
+
+            a {
+                display: inline-block;
+                border: 2px solid $coral;
+                border-radius: 25px 25px;
+                margin: 3rem 0;
+                padding: 0.5rem 1.5rem;
+                transition: 0.3s ease;
+                color: $coral;
+                text-decoration: none;
+
+                &:hover {
+                    background-color: $coral;
+                    color: $bg-color;
+                }
+            }
+        }
+    }
+
+    @media screen and (min-width: 48rem) {
+        section.cheesecakes-container {
+            width: 50%;
+        }
+    }
+
+    .favourites-container {
+        .favourites {
+            ul {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                margin: 0;
+                padding: 0;
+
+                li {
+                    display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    padding: 0 1rem;
+                    a {
+                        img {
+                            margin: 0 auto;
+                            object-fit: cover;
+                            width: 200px;
+                            height: 200px;
+                            border-radius: 50%;
+                        }
+                    }
+                    h3 {
+                        width: 100%;
+                    }
+                }
+            }
+
+            .button {
+                display: inline-block;
+                border: 2px solid $coral;
+                border-radius: 25px 25px;
+                margin: 3rem 0;
+                padding: 0.5rem 1.5rem;
+                transition: 0.3s ease;
+                color: $coral;
+                text-decoration: none;
+
+                &:hover {
+                    background-color: $coral;
+                    color: $bg-color;
+                }
+            }
+        }
+    }
 }
 
 @media screen and (min-width: 48rem) {
-  .favourites-container {
-    .favourites {
-      ul {
-        display: flex;
-        flex-wrap: wrap;
-        margin: 0;
-        padding: 0;
+    .favourites-container {
+        .favourites {
+            ul {
+                display: flex;
+                flex-wrap: wrap;
+                margin: 0;
+                padding: 0;
 
-        li {
-          width: 30%;
-          a {
-            img {
-              max-width: 300px;
-              height: 300px;
+                li {
+                    width: 30%;
+                    a {
+                        img {
+                            max-width: 300px;
+                            height: 300px;
+                        }
+                    }
+                }
             }
-          }
         }
-      }
     }
-  }
 }
 
 @media screen and (min-width: 82rem) {
-  .favourites-container {
-    .favourites {
-      ul {
-        li {
-          width: 20%;
+    .favourites-container {
+        .favourites {
+            ul {
+                li {
+                    width: 20%;
+                }
+            }
         }
-      }
     }
-  }
 }
 
 section.drinks-container {
-  section.drinks {
-    h3 {
-      width: 100%;
-    }
-
-    .single-drinks-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-
-      .single-drinks {
-        background-color: #fff;
-        padding: 2rem;
-        margin: 1rem 2rem;
-        width: 20rem;
-        height: 20rem;
-        border-radius: 20px;
-        display: flex;
-        flex-wrap: wrap;
-        a {
-          width: 100%;
-          text-decoration: none;
-          color: $text-color;
-          transition: 0.3s ease;
-
-          &:hover {
-            color: $coral;
-          }
-          img {
-            border-radius: 50%;
-          }
-        }
-      }
-    }
-
-    .button {
-      display: inline-block;
-      border: 2px solid $coral;
-      border-radius: 25px 25px;
-      margin: 3rem 5rem;
-      padding: 0.5rem 1.5rem;
-      transition: 0.3s ease;
-      color: $coral;
-      text-decoration: none;
-
-      &:hover {
-        background-color: $coral;
-        color: $bg-color;
-      }
-    }
-  }
-}
-
-@media screen and (min-width: 48rem) {
-  section.drinks-container {
     section.drinks {
-      .single-drinks-container {
-        .single-drinks {
-          width: 20%;
-          display: flex;
-          flex-wrap: wrap;
-          a {
+        h3 {
             width: 100%;
-          }
+        }
+
+        .single-drinks-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            .single-drinks {
+                background-color: #fff;
+                padding: 2rem;
+                margin: 1rem 2rem;
+                width: 20rem;
+                height: 20rem;
+                border-radius: 20px;
+                display: flex;
+                flex-wrap: wrap;
+                a {
+                    width: 100%;
+                    text-decoration: none;
+                    color: $text-color;
+                    transition: 0.3s ease;
+
+                    &:hover {
+                        color: $coral;
+                    }
+                    img {
+                        border-radius: 50%;
+                    }
+                }
+            }
         }
 
         .button {
-          margin: 0 10rem;
-        }
-      }
-    }
-  }
-}
-
-section.merch-container {
-  margin: 3rem 0;
-  background-color: $color__background-body;
-  section.merch {
-    h3 {
-      text-align: center;
-      width: 100%;
-      height: 4rem;
-    }
-
-    .single-merch-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-      text-align: center;
-
-      .single-merch {
-        width: 40%;
-        a {
-          text-decoration: none;
-
-          img {
-            border-radius: 10px;
-            height: 200px;
-            object-fit: cover;
-          }
-          h3 {
-            color: $text-color;
+            display: inline-block;
+            border: 2px solid $coral;
+            border-radius: 25px 25px;
+            margin: 3rem 5rem;
+            padding: 0.5rem 1.5rem;
             transition: 0.3s ease;
+            color: $coral;
+            text-decoration: none;
 
             &:hover {
-              color: $coral;
+                background-color: $coral;
+                color: $bg-color;
             }
-          }
         }
-      }
     }
-
-    .button {
-      display: inline-block;
-      border: 2px solid $coral;
-      border-radius: 25px 25px;
-      margin: 3rem 0;
-      padding: 0.5rem 1.5rem;
-      transition: 0.3s ease;
-      color: $coral;
-      text-decoration: none;
-
-      &:hover {
-        background-color: $coral;
-        color: $bg-color;
-      }
-    }
-  }
 }
 
 @media screen and (min-width: 48rem) {
-  section.merch-container {
-    section.merch {
-      h3 {
-        height: 2rem;
-      }
+    section.drinks-container {
+        section.drinks {
+            .single-drinks-container {
+                .single-drinks {
+                    width: 20%;
+                    display: flex;
+                    flex-wrap: wrap;
+                    a {
+                        width: 100%;
+                    }
+                }
 
-      .single-merch {
-        width: 18%;
-        a {
-          img {
-            height: 200px;
-            object-fit: cover;
-          }
+                .button {
+                    margin: 0 10rem;
+                }
+            }
         }
-      }
     }
-  }
+}
+
+section.merch-container {
+    margin: 3rem 0;
+    background-color: $color__background-body;
+    section.merch {
+        h3 {
+            text-align: center;
+            width: 100%;
+            height: 4rem;
+        }
+
+        .single-merch-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1rem;
+            text-align: center;
+
+            .single-merch {
+                width: 40%;
+                a {
+                    text-decoration: none;
+
+                    img {
+                        border-radius: 10px;
+                        height: 200px;
+                        object-fit: cover;
+                    }
+                    h3 {
+                        color: $text-color;
+                        transition: 0.3s ease;
+
+                        &:hover {
+                            color: $coral;
+                        }
+                    }
+                }
+            }
+        }
+
+        .button {
+            display: block;
+            border: 2px solid $coral;
+            border-radius: 25px 25px;
+            margin: 3rem auto;
+            width: fit-content;
+            padding: 0.5rem 1.5rem;
+            transition: 0.3s ease;
+            color: $coral;
+            text-decoration: none;
+
+            &:hover {
+                background-color: $coral;
+                color: $bg-color;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 48rem) {
+    section.merch-container {
+        section.merch {
+            h3 {
+                height: 2rem;
+            }
+
+            .single-merch {
+                width: 18%;
+                a {
+                    img {
+                        height: 200px;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 60rem) {
-  body.page-id-42 {
-    section.home-blog {
-      section.cheesecakes-container {
-        section.cheesecakes {
-          // @include page-grid-layout;
-        }
-      }
-      section.favourites-container {
-        section.favourites {
-          // @include page-grid-layout;
-        }
-      }
+    body.page-id-42 {
+        section.home-blog {
+            section.cheesecakes-container {
+                section.cheesecakes {
+                    // @include page-grid-layout;
+                }
+            }
+            section.favourites-container {
+                section.favourites {
+                    // @include page-grid-layout;
+                }
+            }
 
-      section.drinks-container {
-        section.drinks {
-          // @include page-grid-layout;
+            section.drinks-container {
+                section.drinks {
+                    // @include page-grid-layout;
+                }
+            }
         }
-      }
-    }
 
-    section.merch-container {
-      section.merch {
-        // @include page-grid-layout;
-      }
+        section.merch-container {
+            section.merch {
+                // @include page-grid-layout;
+            }
+        }
     }
-  }
 }
