--- a/sass/components/_catering.scss
+++ b/sass/components/_catering.scss
@@ -9,22 +9,18 @@ body.page-id-69 {
             justify-content: center;
 
             article.catering-options {
-                max-width: 18rem;
-                margin: 0 1rem 1rem 1rem;
-                
-
-                p {
-                    margin-bottom: 0;
-                }
+                max-width: 20rem;
+                margin: 1rem .5rem;
+                padding: 0 1rem;
             }
         }
     }
 
     section.faq-container {
-        margin: 0 0 2rem 0;
+        margin: 0rem 1rem 5rem 1rem;
         section.faq {
             h2 {
-                padding: 2rem 0 1rem 0;
+                padding: 3rem 0 1rem 0;
                 font-size: 2rem;
                 border-top: $text-color solid 2px;
             }
@@ -32,7 +28,7 @@ body.page-id-69 {
                 text-align: left; 
                 margin: 1rem 0;
                 background-color: white;
-                border: $text-color solid 2px;
+                border: $text-color solid 3px;
                 border-radius: 20px 20px;
 
                 summary.faq-question {
@@ -40,7 +36,7 @@ body.page-id-69 {
                 }
 
                 div.faq-answer {
-                    border-top: $text-color solid 2px;
+                    border-top: $text-color solid 3px;
                     padding: 1rem 1.5rem;
                 }
             }
@@ -48,6 +44,7 @@ body.page-id-69 {
     }
 
     section.catering-form-container {
+        padding: 3rem 0;
         background-color: $coral;
         color: $bg-color;
         section.catering-form {
@@ -66,12 +63,12 @@ body.page-id-69 {
     }
 
     section.image-container {
-        padding-bottom: .75rem;
+        padding: 2rem 1rem;
         img {
-            width: 60.5rem;
-            height: 18rem;
+            width: 20rem;
+            height: 20rem;
             object-fit: cover;
-            border-radius: 10px 10px;
+            border-radius: 50% 50%;
             border: $blue solid 8px;
             outline: $coral solid 8px;
         }
