--- a/sass/components/_catering.scss
+++ b/sass/components/_catering.scss
@@ -55,9 +55,8 @@ body.page-id-69 {
             }
 
             button {
-                background-color: $bg-color;
-                border: $text-color solid 3px;
-                color: $text-color;
+                @include button-style;
+
             }
         }
     }
