--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -12,19 +12,17 @@ body.page-id-67 {
                 flex-direction: column;
                 align-items: center;
                 button.menu-tab-btn {
-                    background-color: $bg-color;
-                    border: 4px solid $coral;
-                    margin-bottom: 0.25rem;
-                    border-radius: 20px;
-                    padding: 0.5rem 1.25rem;
-                    width: 280px;
+                    @include menu-button-style;
                 }
                 button.menu-tab-btn.current-menu-tab {
-                    border: 4px solid $blue;
+                    border: 2px solid $coral;
+                    background-color: $coral;
+                    color: $text-color-light;
                 }
-                button.menu-tab-btn:hover,
-                button.menu-tab-btn:focus {
-                    border: 4px solid $blue;
+
+                button.menu-tab-btn:hover {
+                    border: 2px solid $coral;
+                    background-color: $coral;
                 }
             }
             section.menu-category-container {
@@ -33,6 +31,7 @@ body.page-id-67 {
                     display: flex;
                     flex-direction: column;
                     align-items: center;
+                    
                     div.menu-item-description {
                         margin-bottom: 0.5rem;
                         order: 3;
@@ -67,7 +66,7 @@ body.page-id-67 {
                     gap: 1rem;
                     button.menu-tab-btn {
                         background-color: $bg-color;
-                        border: 4px solid $coral;
+                        border: 2px solid $blue;
                         margin-bottom: 0.25rem;
                         border-radius: 20px;
                         padding: 0.5rem 0.8rem;
@@ -75,7 +74,7 @@ body.page-id-67 {
                     }
                     button.menu-tab-btn:hover,
                     button.menu-tab-btn:focus {
-                        border: 4px solid $blue;
+                        border: 2px solid $coral;
                     }
                 }
                 section.menu-category-container {
