--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -5,6 +5,7 @@ main.site-main {
     font-family: $roboto;
     color: $text-color;
     text-align: center;
+    padding: 3rem 0;
 
     h1 {
         font-family: $abril;
