--- a/sass/components/_location.scss
+++ b/sass/components/_location.scss
@@ -13,18 +13,18 @@ body.post-type-archive-cafe-location {
             section.location-single {
                 max-width: 20rem;
                 margin: 1rem .5rem;
-                padding: 0 1rem;
+                padding: 1.5rem;
 
                 h2, p {
                     // text-align: left;
                 }
 
                 img {
-                    height: 15rem;
-                    max-width: 100%;
+                    height: 20rem;
+                    width: 20rem;
                     object-fit: cover;
-                    border-radius: 8px 8px;
-                    border: $blue solid 8px;
+                    border-radius: 20px 20px;
+                    border: $yellow solid 7px;
                 }
 
             }
@@ -36,18 +36,20 @@ body.post-type-archive-cafe-location {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 3rem 0 7rem 0;
-        background-color: $blue;
+        padding: 2rem 1.5rem 7rem 1.5rem;
+        background-color: $coral;
 
         h2 {
+            font-size: 2rem;
             margin-bottom: 3rem;
+            color: $bg-color;
         }
         
         div.acf-map {
-            outline: $bg-color solid 10px;
-            border: $coral solid 10px;
-            border-radius: 7px 7px;
-            width: 61rem;
+            outline: $yellow solid 10px;
+            border: $bg-color solid 10px;
+            border-radius: 20px 20px;
+            width: 90%;
             height: 30rem;
             margin: 0 auto;
         }
@@ -65,6 +67,14 @@ body.post-type-archive-cafe-location {
             }
         }
         section.google-maps-container {
+            div.acf-map {
+                outline: $yellow solid 10px;
+                border: $bg-color solid 10px;
+                border-radius: 20px 20px;
+                width: 62rem;
+                height: 30rem;
+                margin: 0 auto;
+            }
         }
     }
 }
