--- a/sass/components/_catering.scss
+++ b/sass/components/_catering.scss
@@ -1,8 +1,8 @@
-@import 'abstracts/abstracts';
+@import "abstracts/abstracts";
 
 body.page-id-69 {
     section.catering-container {
-    padding: 1rem 1.5rem;  
+        padding: 1rem 1.5rem;
         section.catering {
             display: flex;
             flex-wrap: wrap;
@@ -10,8 +10,7 @@ body.page-id-69 {
 
             article.catering-options {
                 max-width: 20rem;
-                margin: 1rem .5rem;
-                padding: 0 1rem;
+                margin: 1rem 0.5rem;
             }
         }
     }
@@ -25,7 +24,7 @@ body.page-id-69 {
                 border-top: $text-color solid 2px;
             }
             article.individual-faq-container {
-                text-align: left; 
+                text-align: left;
                 margin: 1rem 0;
                 background-color: white;
                 border: $text-color solid 3px;
@@ -56,7 +55,6 @@ body.page-id-69 {
 
             button {
                 @include button-style;
-
             }
         }
     }
@@ -64,18 +62,35 @@ body.page-id-69 {
     section.image-container {
         padding: 2rem 1.5rem 1rem 1.5rem;
         img {
-            width: 18rem;
-            height: 18rem;
+            width: 15rem;
+            height: 15rem;
             object-fit: cover;
             border-radius: 50% 50%;
             border: $blue solid 8px;
             outline: $coral solid 8px;
         }
     }
-
 }
 
-@media (min-width: 65rem) {
+@media (min-width: 40rem) {
+    body.page-id-69 {
+        section.image-container {
+            img {
+                width: 18rem;
+                height: 18rem;
+            }
+        }
+        section.catering-container {
+            section.catering {
+                article.catering-options {
+                    padding: 0 1rem;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 68rem) {
     body.page-id-69 {
         section.catering-container {
             @include page-grid-layout;
@@ -84,7 +99,7 @@ body.page-id-69 {
                 flex-wrap: wrap;
                 justify-content: space-between;
                 padding-bottom: 0;
-                section.catering-options{
+                section.catering-options {
                     margin-bottom: 0;
                 }
             }
@@ -92,16 +107,14 @@ body.page-id-69 {
         section.faq-container {
             @include page-grid-layout;
             section.faq {
-                
             }
         }
         section.catering-form-container {
             display: grid;
             grid-template-columns: 40rem;
-            justify-content:center;
+            justify-content: center;
             align-items: center;
             section.catering-form {
-                
             }
         }
     }
