--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -10,6 +10,7 @@ Some code as been added (see the comments in the CSS) and some code has been mov
     align-items: center;
     background-color: $coral;
     height: 70px;
+    font-weight: bold;
 
     .site-branding {
         height: 70px;
@@ -113,7 +114,7 @@ Some code as been added (see the comments in the CSS) and some code has been mov
     z-index: 999999;
 }
 
-@media screen and (min-width: 50em) {
+@media screen and (min-width: 53em) {
     .main-navigation {
         button.menu-toggle {
             display: none;
