Styled Cart Empty Page

--- a/sass/plugins/woocommerce/_checkout.scss
+++ b/sass/plugins/woocommerce/_checkout.scss
@@ -1,3 +1,15 @@
+// Cart Page
+.return-to-shop{
+	a{
+		@include button-style;
+	}
+}
+
+.cart-empty .woocommerce-info{
+	background-color: transparent;
+}
+
+
 @media screen and (min-width: 768px) {
 
 	.col2-set {
