--- a/sass/components/_catering.scss
+++ b/sass/components/_catering.scss
@@ -1,121 +1,140 @@
 @import "abstracts/abstracts";
 
 body.page-id-69 {
-    section.catering-container {
-        padding: 1rem 1.5rem;
-        section.catering {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+  section.catering-container {
+    padding: 1rem 1.5rem;
+    section.catering {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
 
-            article.catering-options {
-                max-width: 20rem;
-                margin: 1rem 0.5rem;
-            }
-        }
+      article.catering-options {
+        max-width: 20rem;
+        margin: 1rem 0.5rem;
+      }
     }
+  }
 
-    section.faq-container {
-        padding: 0rem 1.5rem 5rem 1.5rem;
-        section.faq {
-            h2 {
-                padding: 3rem 0 1rem 0;
-                font-size: 2rem;
-                border-top: $text-color solid 2px;
-            }
-            article.individual-faq-container {
-                text-align: left;
-                margin: 1rem 0;
-                background-color: white;
-                border: $text-color solid 3px;
-                border-radius: 20px 20px;
+  section.faq-container {
+    padding: 0rem 1.5rem 5rem 1.5rem;
+    section.faq {
+      h2 {
+        padding: 3rem 0 1rem 0;
+        font-size: 2rem;
+        border-top: $text-color solid 2px;
+      }
+      article.individual-faq-container {
+        text-align: left;
+        margin: 1rem 0;
+        background-color: white;
+        border: $text-color solid 3px;
+        border-radius: 20px 20px;
+        transition: 0.3s ease;
 
-                summary.faq-question {
-                    padding: 1rem;
-                }
-
-                div.faq-answer {
-                    border-top: $text-color solid 3px;
-                    padding: 1rem 1.5rem;
-                }
-            }
+        &:hover,
+        &:focus {
+          cursor: pointer;
+          border: $coral solid 3px;
         }
-    }
 
-    section.catering-form-container {
-        padding: 3rem 1.5rem;
-        background-color: $coral;
-        color: $bg-color;
-        section.catering-form {
-            text-align: left;
-
-            h2 {
-                text-align: center;
-            }
-
-            button {
-                @include button-style;
-            }
+        summary.faq-question {
+          padding: 1rem;
         }
-    }
 
-    section.image-container {
-        padding: 2rem 1.5rem 1rem 1.5rem;
-        img {
-            width: 15rem;
-            height: 15rem;
-            object-fit: cover;
-            border-radius: 50% 50%;
-            border: $blue solid 8px;
-            outline: $coral solid 8px;
+        div.faq-answer {
+          border-top: $text-color solid 1px;
+          padding: 1rem 1.5rem;
         }
+      }
     }
+  }
+
+  section.catering-form-container {
+    padding: 3rem 1.5rem;
+    background-color: $coral;
+    color: $bg-color;
+    section.catering-form {
+      text-align: left;
+
+      h2 {
+        text-align: center;
+      }
+
+      button {
+        display: inline-block;
+        border: 2px solid $yellow;
+        color: $text-color-light;
+        border-radius: 25px 25px;
+        margin: 3rem 5rem;
+        padding: 0.5rem 1.5rem;
+        transition: 0.3s ease;
+        text-decoration: none;
+
+        &:hover {
+            background-color: $yellow;
+            color: $text-color-light;
+        }
+      }
+    }
+  }
+
+  section.image-container {
+    padding: 2rem 1.5rem 1rem 1.5rem;
+    img {
+      width: 15rem;
+      height: 15rem;
+      object-fit: cover;
+      border-radius: 50% 50%;
+      border: $blue solid 8px;
+      outline: $coral solid 8px;
+    }
+  }
 }
 
 @media (min-width: 40rem) {
-    body.page-id-69 {
-        section.image-container {
-            img {
-                width: 18rem;
-                height: 18rem;
-            }
-        }
-        section.catering-container {
-            section.catering {
-                article.catering-options {
-                    padding: 0 1rem;
-                }
-            }
-        }
+  body.page-id-69 {
+    section.image-container {
+      img {
+        width: 18rem;
+        height: 18rem;
+      }
     }
+    section.catering-container {
+      section.catering {
+        article.catering-options {
+          padding: 0 1rem;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 68rem) {
-    body.page-id-69 {
-        section.catering-container {
-            @include page-grid-layout;
-            section.catering {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-between;
-                padding-bottom: 0;
-                section.catering-options {
-                    margin-bottom: 0;
-                }
-            }
+  body.page-id-69 {
+    section.catering-container {
+      @include page-grid-layout;
+      section.catering {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-bottom: 0;
+        section.catering-options {
+          margin-bottom: 0;
         }
-        section.faq-container {
-            @include page-grid-layout;
-            section.faq {
-            }
-        }
-        section.catering-form-container {
-            display: grid;
-            grid-template-columns: 40rem;
-            justify-content: center;
-            align-items: center;
-            section.catering-form {
-            }
-        }
+      }
     }
+    section.faq-container {
+      @include page-grid-layout;
+      section.faq {
+      }
+    }
+    section.catering-form-container {
+      display: grid;
+      grid-template-columns: 40rem;
+      justify-content: center;
+      align-items: center;
+      section.catering-form {
+      }
+    }
+  }
 }
