--- a/sass/style.scss
+++ b/sass/style.scss
@@ -88,6 +88,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "components/job";
 @import "components/location";
 @import "components/menu";
+@import "components/error404";
 
 /*--------------------------------------------------------------
 # Plugins
