--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -188,13 +188,14 @@ Some code as been added (see the comments in the CSS) and some code has been mov
 }
 
 .site-footer {
-    background-color: $blue;
+    background-color: $coral;
     padding: 4rem 0;
 
     .site-info {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        gap: 1rem;
 
         .menu-footer-menu-container {
             width: 50%;
@@ -207,13 +208,14 @@ Some code as been added (see the comments in the CSS) and some code has been mov
                 grid-template-columns: repeat(2, 1fr);
                 margin: 0;
                 padding: 0;
-
+                font-weight: 600;
+                
                 li {
                     padding: 0.3rem;
 
                     a {
                         text-decoration: none;
-                        color: $text-color;
+                        color: $text-color-light;
                         transition: 0.3s ease;
 
                         &:hover {
@@ -221,6 +223,7 @@ Some code as been added (see the comments in the CSS) and some code has been mov
                             padding: 0.2rem 0.6em;
                             border-radius: 20px 20px;
                         }
+                        
                     }
                 }
             }
@@ -238,16 +241,37 @@ Some code as been added (see the comments in the CSS) and some code has been mov
 
         .menu-social-media-menu-container {
             width: 80%;
-            text-align: center;
+            justify-content: center;
+            display: flex;
+            flex-wrap: wrap;
+
             ul {
+                display: flex;
                 margin: 0;
                 padding: 0;
+                align-items: center;
 
                 li {
                     list-style: none;
+                    padding: 0 1rem;
+                    align-items: center;
                     a {
                         text-decoration: none;
                         color: $text-color;
+
+                        svg{
+                            fill: $text-color-light;
+                            transition: 0.3s ease;
+                            display: block;
+                            width: 30px;
+                            &:hover{
+                                fill: $yellow;
+                            }
+                        }
+
+                        img{
+                            max-width: 100px;
+                        }
                     }
                 }
             }
