Finalized styling site

--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -45,6 +45,7 @@
     transition: 0.3s ease;
     color: $coral;
     text-decoration: none;
+    font-family: inherit;
 
     &:hover {
         background-color: $coral;
